[Issue-25] adiciona fluxo de criação de reports (#35)
* feat(report): add dto

* feat(report): add model

* test(report): add model

* feat(error): add invalid param error

* feat(database): add postgres reports data source

* test(database): add postgres reports data source

* feat(report): add controller

* test(report): add controller

* feat(route): add route to create reports

* refactor(reports-controller): improve request messages

* doc: add reports endpoint in swagger.json

* fix: add empty line
